feat: credit sales fixes and connectivity indicator
- Fix credit sales popup alerts opening as separate windows by adding initOwner to all dialogs
- Fix edit mode creating duplicate credit sale records by implementing delete-then-recreate pattern
- Add labour, parts cost, and discount columns to credit_sales table and detail panel UI
- Fix settle credit calculation to include full amount (labour + parts cost - discount) instead of just parts subtotal
- Add internet connectivity indicator (small dot) in header bar showing online/offline status
- Replace ICMP ping with HTTP-based connectivity check for reliable detection
- Move connectivity check to background ScheduledExecutorService to prevent UI lag
- Increase action buttons column width in credit sales table for better visibility

Files modified:
- DatabaseManager.java: Add labour/parts_cost/discount columns
- LocalCreditSalesRepository.java: Save/load additional cost fields, fix getTotalAmount()
- ProcessCreditSaleController.java: Fix edit mode logic
- CreditSalesController.java: Add UI labels for cost breakdown
- credit-sales.fxml: Add cost breakdown labels, widen action column
- LayoutController.java: Add connectivity monitor with HTTP check
- main-layout.fxml: Add connection indicator dot
- sidebar.css: Style connection indicator